[gd_scene load_steps=5 format=3 uid="uid://dgw63hsybqj3u"]

[ext_resource type="Script" uid="uid://clrvk7x6lxtiw" path="res://scripts/scene_scripts/game_scene.gd" id="1_ycayy"]
[ext_resource type="Script" uid="uid://beux00cohix03" path="res://scripts/scene_scripts/board_camera.gd" id="2_bw6k5"]
[ext_resource type="PackedScene" uid="uid://dnimkygvmidpk" path="res://setting_interface_scenes/settings_visual_button.tscn" id="3_y3j0m"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ycayy"]
properties/0/path = NodePath("SubViewportContainerSides/SideViewport/TextEdit:text")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ycayy")

[node name="SubViewportContainerSides" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -512.0
offset_bottom = 512.0
grow_horizontal = 0

[node name="SideViewport" type="SubViewport" parent="SubViewportContainerSides"]
handle_input_locally = false
render_target_update_mode = 4

[node name="TextEdit" type="TextEdit" parent="SubViewportContainerSides/SideViewport"]
offset_right = 8.0
offset_bottom = 8.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "test 1 test 2 test 3 test 4 test 5 test 6"
wrap_mode = 1

[node name="BG" type="CanvasLayer" parent="SubViewportContainerSides/SideViewport"]
layer = -5

[node name="ColorRect" type="ColorRect" parent="SubViewportContainerSides/SideViewport/BG"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960784, 0.960784, 0.862745, 1)

[node name="SubViewportContainerBoard" type="SubViewportContainer" parent="."]
layout_mode = 1
offset_right = 512.0
offset_bottom = 512.0

[node name="BoardSubViewport" type="SubViewport" parent="SubViewportContainerBoard"]
handle_input_locally = false
render_target_update_mode = 4

[node name="BoardCamera" type="Camera2D" parent="SubViewportContainerBoard/BoardSubViewport"]
limit_smoothed = true
position_smoothing_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("2_bw6k5")

[node name="BG" type="CanvasLayer" parent="SubViewportContainerBoard/BoardSubViewport"]
layer = -1

[node name="ColorRect" type="ColorRect" parent="SubViewportContainerBoard/BoardSubViewport/BG"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.276632, 0.452537, 0.923213, 1)

[node name="SettingsVisualButton" parent="." instance=ExtResource("3_y3j0m")]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://4vag6fpyg0a5")
spawn_path = NodePath("../SubViewportContainerBoard/BoardSubViewport")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ycayy")
